# cvecli-db

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
