[project]
name = "cvec-db"
version = "0.1.0"
description = "CVE database builder - generates parquet files for cvec tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["cve", "security", "vulnerability", "database"]
dependencies = [
    "cvec[semantic] @ git+https://github.com/RomainRiv/cvec.git@cd63388a098981f4e1f2bb32ce41ee83d56c4a41",
    "typer>=0.16.0",
    "polars>=1.31.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvec_db"]

[tool.hatch.metadata]
allow-direct-references = true
