[project]
name = "cvecli-db"
version = "0.1.0"
description = "CVE database builder - generates parquet files for cvecli tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["cve", "security", "vulnerability", "database"]
dependencies = [
    "cvecli[semantic] @ git+https://github.com/RomainRiv/cvecli.git@9cdf31aac889967055603b33340fffff14604629",
    "typer>=0.16.0",
    "polars>=1.31.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvecli_db"]

[tool.hatch.metadata]
allow-direct-references = true
