[project]
name = "cvecli-db"
version = "0.1.0"
description = "CVE database builder - generates parquet files for cvecli tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["cve", "security", "vulnerability", "database"]
dependencies = [
    "cvecli[semantic] @ git+https://github.com/RomainRiv/cvecli.git@38195215665cd07f80e1f349cdee9beceb777b5a",
    "typer>=0.16.0",
    "polars>=1.31.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvecli_db"]

[tool.hatch.metadata]
allow-direct-references = true
